2003-04-18  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/SkunkWeb/Server.py (_setConfigDefaults): setting default
	value for runInForeground here, not in bootloader.py.

	* SkunkWeb/SkunkWeb/bootloader.py.in (init): the default value for
	runInForeground shouldn't be set here.

	* pylibs/scope.py: added "freeze" and "unfreeze" methods
	that store the scoped values in self.__dict__ and clean them
	out, respectively.
	(Scopeable.pop): made compatible with scopeable.Scopeable.pop().

2003-04-18  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/ConfigLoader.py: switch to using the Python version of
	scope.

2003-04-17  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/scope.py: The Python version turns out to be, with a
	couple of small optimizations, 33% faster than the C version. 

2003-04-16  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/SkunkWeb/confvars.py.in (LOCALSTATEDIR): created a
	variable for localstatedir.
	
2003-04-16  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/Makefile.in (install): rolling back Drew's change for
	HPUX, because it breaks the install for systems where autoconf
	detects and uses a binary install program.  We need to find
	another solution for HPUX.

2003-04-16    <drew@loki.sai-office>

	* pylibs/Makefile.in (install): on HPUX, for reasons that are
	totally opaque to me, install-sh does not work unless you run it
	as "sh $(INSTALL)...", but just here... !??!!?

	* SkunkWeb/SkunkWeb/Server.py: now deals ok when os does not
	have the seteuid or setegid functions

	* SkunkWeb/skunkweb.py.in (mods): now deals ok when os does not
	have the seteuid or setegid functions

	* SkunkWeb/Services/requestHandler/requestHandler.py (_processRequest) 
	(_sendResponse): fixes to ignore non-erroneous exceptions (i.e.
	those where the connection dies).

2003-04-11    <drew@loki.sai-office>

	* pylibs/SocketMan/SocketMan.py: now checks for EWOULDBLOCK on
	accept() error.

	* SkunkWeb/Makefile.in, SkunkWeb/Services/Makefile.in,